front-deployment.yml
# deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      serviceAccountName: pingora-ingress
      containers:
        - name: front
          image: localhost:5001/front:2024.05.09--16.27.24
          ports:
            - containerPort: 8080
