back-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  type: ClusterIP
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 50055
