front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31003
  selector:
    app: front
